[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Fruits/banana_0.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fruits/banana_2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fruits/banana_1.png" type="Texture" id=3]
[ext_resource path="res://Food.gd" type="Script" id=4]
[ext_resource path="res://Assets/Mine/mine_0.png" type="Texture" id=5]
[ext_resource path="res://Assets/Mine/mine_1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Mine/explosion_1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Mine/explosion_2.png" type="Texture" id=8]
[ext_resource path="res://Assets/Mine/explosion_0.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "banana",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "mine",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": false,
"name": "explosion",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21.8054, 22.1735 )

[sub_resource type="StyleBoxLine" id=3]
color = Color( 1, 0, 0, 1 )
grow_begin = -1.0
grow_end = 0.0
thickness = 5

[sub_resource type="StyleBoxEmpty" id=4]

[node name="Food" type="AnimatedSprite"]
frames = SubResource( 1 )
animation = "banana"
frame = 2
playing = true
script = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -21.7368
margin_top = -25.0096
margin_right = 65.2632
margin_bottom = -20.0096
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 0.5, 0.5 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
step = 25.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeTimer" type="Timer" parent="ProgressBar"]
wait_time = 0.8

[connection signal="animation_finished" from="." to="." method="_on_Food_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="ProgressBar/LifeTimer" to="." method="_on_LifeTimer_timeout"]
